@@ -14,14 +14,15 @@ git_tag_message    = CPAN release %v
 no_AutoPrereq      = 1
 
 [Prereq / Runtime]
-perl                       = 5.008
-JSON::XS                   = 0
-POE                        = 1.292
-POE::Component::IRC::State = 6.43
-Proc::Daemon               = 0.02
-Term::ANSIColor            = 0
-YAML::XS                   = 0
+perl                        = 5.008
+JSON::XS                    = 0
+POE                         = 1.292
+POE::Component::Client::DNS = 0.99
+POE::Component::IRC::State  = 6.45
+Proc::Daemon                = 0.02
+Term::ANSIColor             = 0
+YAML::XS                    = 0
 
 [Prereq / BuildRequires]
-Test::More                 = 0.47
-Test::Script               = 1.07
+Test::More                  = 0.47
+Test::Script                = 1.07
